# bookbooks-segmenter

./: appspec.yml
config/: cw-config.json  supervisord.conf
scripts/: install-segmenter.sh  start-cw-agent.sh  start-segmenter.sh
segmenter/: pyproject.toml
segmenter/segmenter/: __init__.py  console.py  main.py
segmenter/segmenter/utilities/: data_classes.py
