[tool.poetry]
name = "segmenter"
version = "0.1.5"
description = ""
authors = ["Antoine Vandermeersch <avdmeers@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
boto3 = "^1.28.84"
supervisor = "^4.2.5"

[tool.poetry.scripts]
segmenter = "segmenter.console:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
